# Dithering

./: CMakeLists.txt  Ditherer.cpp  Ditherer.h  Palette.cpp  Palette.h  Utilities.cpp  Utilities.h  main.cpp  videoProcessing.cpp
palettes/: B&W.txt  all.txt  colorSelect.txt  greys.txt  standard.txt  stylised.txt
